python/testData/quickFixes/PyTypeHintsQuickFixTest/callableMoreThanTwoElements.py
from typing import Callable

f: Callable[<error descr="'Callable' must be used as 'Callable[[arg, ...], result]'">int<caret>, str</error>, str]